[package]
name = "unpaid-intern"
version = "0.1.0"
edition = "2024"

[dependencies]
bumpalo = "3.19"

[dependencies.rustc-hash]
version = "2.1.1"
default-features = false

[dependencies.hashbrown]
version = "0.15"
default-features = false

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]

[features]
serialize = ["dep:serde"]
