[package]
name = "unpaid-intern"
edition = "2024"

version = "0.1.0"

description = "A convenient little string interner"
license = "MPL-2.0"
license-file = "LICENSE"

documentation = "https://docs.rs/unpaid-intern/latest/unpaid_intern/"
repository = "https://github.com/SamuelMcGowan/unpaid-intern"

[dependencies]
bumpalo = "3.19"

[dependencies.rustc-hash]
version = "2.1.1"
default-features = false

[dependencies.hashbrown]
version = "0.15"
default-features = false

[dependencies.serde]
version = "1.0"
optional = true
features = ["derive"]

[features]
serialize = ["dep:serde"]
